# Trader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trader.java  config.toml.example
config/: config.toml.example
src/: config.rs  daemon.rs  database.rs  main.rs
src/algorithm/: mod.rs
src/api/: coinspot.rs  mod.rs
