[package]
name = "Trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.9"
sqlite = "0.37.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
